Add CurrencyService and import to main

--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
               <option value="ZAR">ZAR</option>
               <option value="ZMW">ZMW</option>
             </select>
-            <select name="currancyOne" id="currancyOne">
+            <select name="currancyTwo" id="currancyTwo">
               <option value="AED">AED</option>
               <option value="AFN">AFN</option>
               <option value="ALL">ALL</option>
